--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,11 @@ stellar:
   repo: 'https://github.com/xaoxuu/hexo-theme-stellar'
   main_css: /css/main.css
   main_js: /js/main.js
+  # 添加 ECharts 和热力图服务
+  plugins:
+    echarts: https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js
+  services:
+    heatmap: /js/services/heatmap.js
 
 
 ######## head tags ########
