feat: 添加备忘录生成器及相关配置
- 在配置文件中添加备忘录服务的链接。
- 新增备忘录生成器，支持从指定目录读取备忘录文件并生成API接口。
- 确保生成的API文件结构清晰，提升数据处理效率。

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ stellar:
     echarts: https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js
   services:
     heatmap: /js/services/heatmap.js
+    memos: /js/services/memos.js
 
 
 ######## head tags ########
