feat: 添加分析功能及相关配置
- 在配置文件中新增分析功能的开关。
- 在模板中引入51LA统计脚本，支持网站流量分析。

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ open_graph:
   enable: true
   twitter_id: # for open_graph meta
 
+# Analytics
+analytics:
+  la: true
 
 ######## Sidebar ########
 # 左上角显示的 logo 区域，包含图标、大标题、副标题
