feat: 更新配置文件及自定义样式
- 在配置文件中将右侧边栏设置为 null，优化布局配置。
- 修改自定义样式，移除右侧空白区域并隐藏右侧边栏切换按钮，提升页面整洁度和用户体验。

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ site_tree:
   # 主页配置
   home:
     leftbar: welcome, recent
-    rightbar: 
+    rightbar: null
   # 博客列表页配置
   index_blog:
     base_dir: blog # 只影响自动生成的页面路径
